[package]
name = "parse-files"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
regex = "1"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true      # automatically strip symbols from the binary
opt-level = 's'   # optimize for size (default is to speed)
lto = true        # enable link time optimization
codegen-units = 1 # maximize size reduction optimisations (compile time increases)
